--- a/babel.config.json
+++ b/babel.config.json
@@ -10,6 +10,7 @@
     ],
     "@babel/plugin-proposal-class-properties",
     "@babel/plugin-proposal-optional-chaining",
+    "@babel/plugin-proposal-private-methods",
     [
       "transform-react-remove-prop-types",
       {
